Fixed the issue of not able to Book a Room after opening the Recurrence Window on Small Screens.

--- a/VORBS/Content/Site.css
+++ b/VORBS/Content/Site.css
@@ -594,3 +594,5 @@ textarea {
     height:auto;
     display:inline-block;
 }
+
+#confirmModal { overflow-y:scroll }
